--- a/index.html
+++ b/index.html
@@ -27,33 +27,34 @@
                 <h1>Let's do this!</h1>
                 <div>
                     <label for="first_name">First Name:</label>
-                    <input type="text" name="first_name" id="first_name">
+                    <input type="text" name="first_name" id="first_name" maxlength="32" pattern="[A-Za-z]{1,32}" placeholder=" " required>
                 </div>
                 <div>
                     <label for="last_name">Last Name:</label>
-                    <input type="text" name="last_name" id="last_name">
+                    <input type="text" name="last_name" id="last_name" maxlength="32" pattern="[A-Za-z]{1,32}" placeholder=" " required>
                 </div>
                 <div>
                     <label for="email">Email:</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" placeholder=" " required>
                 </div>
                 <div>
                     <label for="phone_number">Phone Number:</label>
-                    <input type="tel" name="phone_number" id="phone_number">
+                    <input type="tel" name="phone_number" id="phone_number" pattern="^\s*\+?\s*([0-9][\s-]*){9,}$" placeholder=" " required>
                 </div>
                 <div>
                     <label for="password">Password:</label>
-                    <input type="password" name="password" id="password">
+                    <input type="password" name="password" id="password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" placeholder=" " required>
                 </div>
                 <div>
                     <label for="password-confirm">Password:</label>
-                    <input type="password" name="password-confirm" id="password-confirm">
+                    <input type="password" name="password-confirm" id="password-confirm" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" placeholder=" " required>
                 </div>
-            </form>
+            
             <div class="footer">
                 <button type="submit">Create Account</button>
                 <p>Already have an account? Log in</p>
             </div>
+        </form>
         </div>
     </div>
     <script src="main.js"></script>
