--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="outer-container">
         <div class="logo-container">
             <div class="black-banner">
-                <img class='logo' src="./odin-lined.png" alt="odin project main logo">
+                <img class='logo' src="./images/odin-lined.png" alt="odin project main logo">
                 <p class="logo-text">ODIN</p>
             </div>
             <p class="photo-credit">Photo by <a href="https://unsplash.com/@haliewestphoto">Halle West</a> on <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a></p>
